# Gazprom_MKS_test

./: .env.sample  README.md  alembic.ini  main.py  pyproject.toml
dao/: cable_line_dao.py  department_dao.py  employee_dao.py  server_room_dao.py  workstation_dao.py
dao/models/: __init__.py  base_model.py  cable_line.py  department.py  employee.py  server_room.py  workstation.py
dao/utils/: implemented.py
database/: cable_journal.db  initialize_engine.py
migration/: env.py
migration/versions/: a9dbb422aec1_create_tables.py
pages/: 1_Сотрудники.py  2_Подразделения.py  3_Серверные.py  4_АРМ.py
services/: cable_line_service.py  department_service.py  employee_service.py  server_room_service.py  workstation_service.py
